--- a/src/public/project.html
+++ b/src/public/project.html
@@ -24,35 +24,12 @@
       </nav>
     </header>
     <main>
-      <section>
-        <h3>Bookstore</h3>
+      <section class="hero-section">
+        <h3 class="title">Bookstore</h3>
         <p>Project sederhana menggunakan express JS</p>
       </section>
       <div id="output"></div>
-      <section class="modal hidden">
-        <div class="flex">
-          <img
-            src="https://avatars.githubusercontent.com/u/62628408?s=96&v=4"
-            width="50px"
-            height="50px"
-            alt="user"
-          />
-          <button class="btn-close">⨉</button>
-        </div>
-        <div>
-          <h3>Stay in touch</h3>
-          <p>
-            This is a dummy newsletter form so don't bother trying to test it.
-            Not that I expect you to, anyways. :)
-          </p>
-        </div>
 
-        <input type="email" id="email" placeholder="brendaneich@js.com" />
-        <button class="btn">Do Something</button>
-      </section>
-
-      <div class="overlay hidden"></div>
-      <button class="btn btn-open">Open Modal</button>
     </main>
     <script src="./script.js" type="text/javascript"></script>
   </body>
